--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
   <link href="https://fonts.googleapis.com/css2?family=Zen+Maru+Gothic:wght@400;700;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/maintenance.css">
 </head>
-<body>
+<body> 
+
+  <div class="splash" id="splash">
+  <img src="assets/images/logo.png" alt="ロゴ" class="splash-logo">
+  </div>
 
   <div class="clouds">
     <div class="cloud"></div>
@@ -42,7 +46,7 @@
 
     <div class="progress-label">
       <span>🐾 進捗</span>
-      <span>70%</span>
+      <span>30%</span>
     </div>
     <div class="progress-wrap">
       <div class="progress-bar"></div>
@@ -58,6 +62,14 @@
   </div>
 
   <p class="footer">2026 5-omochi-5</p>
+
+  <script>
+    window.addEventListener('load', function () {
+      setTimeout(function () {
+        document.getElementById('splash').classList.add('hide');
+      }, 1800); // ← 表示時間（ミリ秒）1800 = 1.8秒
+    });
+  </script>
 
 </body>
 </html>
